fix mobile horizontal scroll

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -33,8 +33,10 @@
 
   --primary-color: #00ad90;
   --secondary-color: var(var(--mp-color-white));
-  --website-max-width: 1440px;
-  --content-max-width: 1200px;
+  /* --website-max-width: 1440px; */
+  /* --content-max-width: 1200px; */
+  --website-max-width: 100vw;
+  --content-max-width: 70vw;
   --grey-900-color: #26262e;
   --grey-600-color: #696970;
   --grey-500-color: #b4b4ba;
@@ -43,6 +45,7 @@
 * {
   box-sizing: border-box;
 }
+
 
 html {
   width: 100vw;
@@ -139,7 +142,7 @@ nav {
 }
 
 p {
-  font-size: 1.3rem;
+  font-size: 1.2rem;
   line-height: 1.4;
   letter-spacing: 0.25px;
 }
@@ -246,7 +249,7 @@ section {
 
 .little-bit-more-section,
 .what-is-swarm-section {
-  padding: 32px 64px;
+  padding: 32px 84px;
   background-color: var(--mp-color-lightcyan);
 }
 
@@ -364,6 +367,7 @@ video {
 
 .rotate90 {
   transform: rotate(-90deg);
+  transform-origin: 50% 50%;
 }
 
 .p-8 {
@@ -735,6 +739,19 @@ nav .checkbox {
 }
 
 @media (max-width: 700px) {
+
+  .osano-cm-window { display: none; }
+
+  /* osana fix for mobile width issue */
+  [class*="osano"] {
+    max-width: 100% !important;
+    overflow-x: hidden !important;
+  }
+
+  :root {
+    --content-max-width: 100vw;
+  }
+
   body {
     overflow-x: hidden;
     width: 100%;
